# IN204-Encrypted-messaging-project

./: README-6.md
Client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/utils/: Utility.h
Server/: CMakeLists.txt  main.cpp
Server/client/: ClientInfo.cpp  ClientInfo.h
Server/database/: SqlManager.cpp  SqlManager.h
Server/server/: BoostServer.cpp  BoostServer.h
Server/utils/: Utils.cpp  Utils.h
SodiumDebug/: CMakeLists.txt  Utility.h  main.cpp
untitled/: CMakeLists.txt
